--- a/styles-old.css
+++ b/styles-old.css
@@ -260,20 +260,37 @@ li:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url('./tecnologia.jpg');
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 form {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: cadetblue;
+    background-color: #cc3300;
     width: 500px;
     height: 600px;
     padding: 20px;
 }
 
+h1{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    color: #66ffff;
+    text-shadow: 5px 5px 5px black;
+}
+
 label {
+
     display: block;
+    font-size: 20px;
+    font-weight: bold;
+    color: #000;
     font-family: 'Oswald', sans-serif;
     margin-top: 10px;
 }
@@ -281,29 +298,57 @@ label {
 input {
     display: block;
     width: 100%;
+    height: 30px;
+    font-size: 25px;
     border-radius: 8px;
 }
+
+input::placeholder{
+    font-size: 20px;
+    padding-left: 10px;
+    color: #000;
+    font-family: Verdana, Geneva, Tahoma, sans-serif; 
+}
+
+
 
 textarea {
     display: block;
     width: 100%;
     max-width: 100%;
     min-width: 100%;
-    height: 300px;
-    min-height: 300px;
-    max-height: 300px;
+    height: 150px;
+    min-height: 150px;
+    max-height: 150px;
     border-radius: 8px;
+}
+
+textarea::placeholder {
+    font-size: 20px;
+    padding-left: 10px;
+    color: #000;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
 }
 
 button {
     width: 100%;
     border: none;
-    font-family: 'Oswald', sans-serif;
-    font-size: 15px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
     background-color: white;
-    color: black;
-    border-radius: 8px;
+    color:#D21617;
+    border-radius: 10px;
     cursor: pointer;
     padding: 8px 12px;
     margin-top: 20px;
+    border: 3px solid black;
+}
+
+button:hover{
+    font-size: 20px;
+    color:#000;
+    border: none;
+    
 }
