--- a/styles-old.css
+++ b/styles-old.css
@@ -98,12 +98,14 @@ li:hover {
 }
 
 .content-container {
+    width: 100vw;
     height: 100vh;
     background-color: #333;
 }
 
 .profile-container {
     color: #333;
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -123,7 +125,7 @@ li:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 360px;
+    width: 300px;
     background: white;
     padding: 30px;
     border-radius: 10px;
@@ -179,7 +181,9 @@ li:hover {
 
 .profile-sinopse {
     font-family: 'Oswald', sans-serif;
-    width: 430px;
+    width: 450px;
+    padding: 10px;
+    background-color: aqua;
     color: #fff;
     font-size: 25px; 
 }
