--- a/styles-old.css
+++ b/styles-old.css
@@ -2,6 +2,8 @@
 
 *{
     margin: 0;
+    text-decoration: none;
+    list-style: none;
 }
 
 .hero-container {
@@ -240,7 +242,7 @@ li:hover {
 }
 
 .project-image{
-    width: 350px;
+    width: 300px;
     height: auto;
     position: relative;
     border-radius: 10px;
@@ -255,6 +257,7 @@ li:hover {
 .project-text{
     color: #fff;
     font-family: 'Oswald', sans-serif;
+    padding: 10px;
 }
 
 .form-container {
@@ -274,7 +277,9 @@ form {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #cc3300;
+    background-color: #030303;
+    border-radius: 10px;
+    border: 2px solid #D21617;
     width: 500px;
     height: 600px;
     padding: 20px;
@@ -284,14 +289,14 @@ h1{
     display:flex;
     align-items: center;
     justify-content: center;
-    color: #66ffff;
+    color: #f2f2f2;
     text-shadow: 5px 5px 5px black;
 }
 
 label {
 
     display: block;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
     color: #000;
     font-family: 'Oswald', sans-serif;
@@ -302,13 +307,13 @@ input {
     display: block;
     width: 100%;
     height: 30px;
-    font-size: 25px;
+    font-size: 18px;
     border-radius: 8px;
+    padding-left: 10px;
 }
 
 input::placeholder{
-    font-size: 20px;
-    padding-left: 10px;
+    font-size: 18px;
     color: #000;
     font-family: Verdana, Geneva, Tahoma, sans-serif; 
 }
@@ -346,12 +351,10 @@ button {
     cursor: pointer;
     padding: 8px 12px;
     margin-top: 20px;
-    border: 3px solid black;
+    border: 3px solid rgb(187, 5, 29);
 }
 
 button:hover{
     font-size: 20px;
-    color:#000;
-    border: none;
-    
+    color:#000;  
 }
